--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "examples/*"
   ],
   "scripts": {
+    "tsc": "tsc",
     "bootstrap": "rm -rf packages/*/node_modules && rm -f packages/*/package-lock.json && lerna exec \"yarn install\" --concurrency=1",
     "build": "lerna run build --concurrency=1",
     "test-build": "lerna exec \"yarn run test && yarn run build\" --concurrency=1",
@@ -20,10 +21,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.4.4",
+    "@babel/preset-typescript": "^7.3.3",
     "@storybook/addon-links": "^5.0.11",
     "@storybook/addons": "^5.0.11",
     "@storybook/react": "^5.0.11",
     "@storybook/storybook-deployer": "^2.8.1",
-    "babel-loader": "^8.0.5"
+    "@types/storybook__react": "^4.0.2",
+    "babel-loader": "^8.0.5",
+    "ts-loader": "^6.0.2",
+    "typescript": "^3.5.1"
   }
 }
