--- a/packages/react-form-composer/package.json
+++ b/packages/react-form-composer/package.json
@@ -2,6 +2,7 @@
   "name": "react-form-composer",
   "version": "0.0.1",
   "description": "Form state management for react, react-native and isomorphic apps.",
+  "main": "lib/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/chrisfield/react-form-composer"
