--- a/packages/react-form-composer/package.json
+++ b/packages/react-form-composer/package.json
@@ -40,8 +40,6 @@
     "webpack-cli": "^3.2.3"
   },
   "dependencies": {
-    "es6-error": "^4.1.1",
-    "is-promise": "^2.1.0",
-    "lodash.topath": "^4.5.2"
+    "es6-error": "^4.1.1"
   }
 }
