--- a/packages/react-form-composer/package.json
+++ b/packages/react-form-composer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-form-composer",
-  "version": "1.1.1",
+  "version": "2.0.0",
   "description": "Form state management for react, react-native and isomorphic apps.",
   "main": "lib/index.js",
   "repository": {
@@ -39,7 +39,5 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3"
   },
-  "dependencies": {
-    "es6-error": "^4.1.1"
-  }
+  "dependencies": {}
 }
