--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "examples/*"
   ],
   "scripts": {
+    "test": "lerna exec \"yarn run test\" --concurrency=1",
     "bootstrap": "rm -rf packages/*/node_modules && rm -f packages/*/package-lock.json && lerna exec \"yarn install\" --concurrency=1",
     "build": "lerna run build --concurrency=1",
     "test-build": "lerna exec \"yarn run test && yarn run build\" --concurrency=1",
