--- a/packages/react-form-composer/package.json
+++ b/packages/react-form-composer/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-form-composer",
   "version": "2.5.16",
-  "description": "Form state management for react, react-native and isomorphic apps.",
+  "description": "Form validation and state management for react, react-native and isomorphic apps.",
   "main": "lib/index.js",
   "repository": {
     "type": "git",
