Add redux-form-state-provider function - nolonger need to use the separate npm module

--- a/examples/with-redux/package.json
+++ b/examples/with-redux/package.json
@@ -25,11 +25,10 @@
     "webpack-dev-server": "^3.2.1"
   },
   "dependencies": {
-    "react": "^16.8.3",
-    "react-dom": "^16.8.3",
-    "react-redux": "^6.0.1",
-    "redux": "^4.0.1",
-    "react-form-composer": "^2.5.12",
-    "react-form-composer-redux-provider": "^2.0.0"
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-form-composer": "^2.6.0",
+    "react-redux": "^7.1.0",
+    "redux": "^4.0.4"
   }
 }
